3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/c_misc.c: fix bug 1413239 Server crash with "who" command output
using null map names
Brendan Lally 2006-02-03

include/newserver.h, server/login.c, socket/init.c, socket/loop.c:
   drop any connection that fails to login successfully after
   MAX_PASSWORD_FAILURES attempts (defaults to 5)
doc/Developers/protocol: document properly the byte counts of item flags,
   and include documentation of the itemcmd setup option.
Brendan Lally 2006-01-30

Custom commands-related fixes.
plugins/cfpython/cfpython.c: fix custom command handling.
server/plugins.c: try all plugins for custom commands.
-----
Moved the global event 'LOGOUT' from when player actually disconnects to when
 player logs out and is asked whether to play again or not.
Modified files:
 server/apply.c main.c
Ryo 2006-01-15

socket/request.c: In ReplyCmd() make sure the reply does not cause a buffer
   overflow.
Andreas Kirschbaum 2006-01-13

socket/request.c: add some better checks in addspell packet formation, fix a
   crash bug.
Brendan Lally 2006-01-13

server/c_object.c: stop rename crashing if there is no name to rename to
   when object is passed by number
--
server/c_object.c: allow the rename command to take tag of the item to be
   renamed, so that clients can form rename commands properly.
Brendan Lally 2006-01-11

server/c_range.c: allow spells cast by number to also have options passed to
   them
Changelog: Commit the changelog entry for the last commit.
Brendan Lally 2006-01-10

 Spell listing support:
 allow 'spell_paths' to be sent to requestinfo, reply with number:path
 change return type of SP_level_spellpoint_cost to sint16